packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/fieldset_error2.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "interopFieldSetError" 20 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "isEmpty" 7 0x00 ())
(( 1 0x00 ())
(int, "2" 1 0x00 ())
(, 1 0x00 ())
(true 4 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "isEmpty" 7 0x00 ())
(( 1 0x00 ())
(int 3 0x00 ())
(ident, "receiver" 8 0x00 ())
(, 1 0x00 ())
(boolean 7 0x00 ())
(ident, "arg" 3 0x00 ())
() 1 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "FieldSet" 8 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""isEmpty"" 9 0x00 ())
(, 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/JavaFieldAccessMutate"" 62 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
